# FloodSim

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  MQTT_events.txt  README.md  Tareas2.txt  documentación.txt  futuras_implementaciones.txt  instalación.txt  instalación_vcpkg.txt  install-deps.sh  mosquitto.conf  requirements.txt  setup.sh  tareas.txt  vcpkg.json
docs/: CMakeLists.txt  MANUAL.md
python/: CMakeLists.txt  convert_IDRISI.py
python/common_scripts/data_io/: idrisi.py
python/common_scripts/misc/: types.py
python/data_pipeline/: config.yaml  main.py  pipeline.py
python/data_pipeline/downloaders/: emodnet_client.py  ign_client.py
python/data_pipeline/drivers/: hierarchical_idrisi_io.py  idrisi_io.py
python/data_pipeline/generators/: base.py  dynamic_layer.py  static_layer.py
python/data_pipeline/generators/layers/: land_cover.py  topo_bathy.py  topography.py  water_depth.py
python/data_pipeline/utils/: api_client.py  raster_io.py  spatial.py
python/data_pipeline_scripts/: config.yaml  pipeline.py  requirements.txt
python/data_pipeline_scripts/data_io/: dynamic_io.py  hierarchical_idrisi_io.py  idrisi_io.py  spatial_utils.py  static_io.py
python/data_pipeline_scripts/downloaders/: emodnet_client.py
python/data_pipeline_scripts/generators/: base.py  dynamic_layer.py  static_layer.py
python/data_pipeline_scripts/generators/layers/: elevation.py  roughness.py  topography.py  water_depth.py
python/data_pipeline_scripts/misc/: types.py
python/models/: CMakeLists.txt  export_models.py
python/models/versions/: first_model_cpu.py
python/mqtt/: config.py  data_model.py  idrisi_io.py  main.py  mock_visualizador.py  network.py  publish_test_events.py  requirements.txt  visualizer.py
python/mqtt_scripts/: network.py  requirements.txt  visualizer.py
python/mqtt_scripts/libs/: messages_pb2.py
python/sim_data_scripts/: requirements.txt
python/sim_data_scripts/rain_on_grid/: config_29_10_2024.yaml  main.py
python/sim_data_scripts/rain_on_grid/data_io/: hdf5.py
python/sim_data_scripts/rain_on_grid/extraction/: base.py  manager.py
python/sim_data_scripts/rain_on_grid/formatting/: visualizer.py
python/sim_data_scripts/rain_on_grid/interpolation/: kriging.py
python/sim_data_scripts/rain_on_grid/misc/: config.py  types.py
python/tensorflow_scripts/: benchmark.py  constants_loader.py  export_model.py  export_models.py  map_generator.py  profile_onnx.py  profiler.py  requirements.txt  requirements_old.txt  simulator_module.py  summary_model.py
python/tensorflow_scripts/models/: first_model_cpu.py
python/tests/mqtt/: publish_test_events.py  test_e2e.py  test_frame_flow.py  test_smoke.py
python/tests/visualizer/: publish_test_events.py  test_coverage_moderate.py  test_data_model.py  test_e2e.py  test_frame_flow.py  test_network.py  test_simulation_app.py  test_smoke.py
python/visualizer/: config.py  data_model.py  demo.py  main.py  mqtt.yml  network.py  requirements.txt  simulation_app.py  visualizer.py  viz.yml
python/visualizer/depth_providers/: base.py  palette.py
python/visualizer/renderers/: base.py  matplotlib_renderer.py  registry.py
python/visualizer/renderers/csv/: csv_renderer.py
python/visualizer/renderers/x3d/: colors.py  serializer.py  x3d_renderer.py
python/visualizer/tools/: csv_utils.py  generate_x3d.py  generate_x3d_heightmap.py
python/visualizer/tools/x3d_player/: generator.py  template.html.j2
src/: CMakeLists.txt
src/Common/: CMakeLists.txt  SimulationBridge.cpp
src/adapters/: CMakeLists.txt
src/adapters/input/: CMakeLists.txt  FileInput.cpp  InputFactory.cpp  MQTTInput.cpp
src/adapters/output/: CMakeLists.txt  ImageOutput.cpp  MQTTOutput.cpp  OutputFactory.cpp  X3DFileOutput.cpp
src/adapters/output/mqtt/: CMakeLists.txt
src/adapters/snapshot_serializer/: CMakeLists.txt  ProtobufSnapshotSerializer.cpp  X3DOptimizedSnapshotSerializer.cpp  X3DSnapshotSerializer.cpp
src/adapters/state_updater/: CMakeLists.txt  ExperimentalStateUpdater.cpp  OnnxStateUpdater.cpp  StateUpdaterFactory.cpp  TensorFlowStateUpdater.cpp
src/app/: Application.cpp  CMakeLists.txt
src/app/adapters/: CMakeLists.txt
src/app/adapters/input/: CMakeLists.txt  FileInput.cpp
src/app/adapters/output/: CMakeLists.txt  CheckpointOutput.cpp  ImageOutput.cpp  MQTTOutput.cpp  OutputFactory.cpp  X3DFileOutput.cpp
src/app/adapters/state_updater/: CMakeLists.txt  OnnxStateUpdater.cpp  StateUpdaterFactory.cpp
src/app/config/: CMakeLists.txt  ConfigLoader.cpp
src/app/core/: CMakeLists.txt  SimulationCore.cpp
src/app/factory/: CMakeLists.txt  InputFactory.cpp  OutputFactory.cpp  SnapshotSerializerFactory.cpp  StateUpdaterFactory.cpp
src/app/io/: CMakeLists.txt
src/app/logging/: CMakeLists.txt  Logger.cpp
src/cli/: CMakeLists.txt  app_icon.aps  app_icon.rc  descripción.txt  mainCLI.cpp  main_cli.cpp
src/core/: CMakeLists.txt  CoreEngineCA.cpp  SimulationCore.cpp  descripción.txt
src/core/grid/: DynamicLayerManager.cpp  MapGrid.cpp  StreamedLayerManager.cpp
src/core/simulation/: SimulationCore.cpp
src/core/snapshot/: AsyncSnapshotManager.cpp  Snapshot.cpp  SnapshotManager.cpp
src/gui/: CMakeLists.txt  app_icon.rc  descripción.txt  mainGUI.cpp  main_gui.cpp
src/gui/helpers/: CMakeLists.txt  Helpers.cpp
src/gui/tabs/: CMakeLists.txt  InputTab.cpp  LoggingTab.cpp  MainControlTab.cpp  OutputTab.cpp  ScenarioTab.cpp  SimulationTab.cpp  StateUpdaterTab.cpp
src/io/: CMakeLists.txt  descripción.txt
src/io/gis/: CMakeLists.txt  GISDataHandler.cpp
src/io/mqtt/: CMakeLists.txt
src/logging/: Logger.cpp
src/main/: CMakeLists.txt  mainCLI.cpp  main_cli.cpp
src/sim/: descripción.txt
src/ui/: CMakeLists.txt  UserInterface.cpp
src/ui/CLI/: CLI_Interface.cpp  CMakeLists.txt
src/ui/gui/: CMakeLists.txt
tests/: CMakeLists.txt  mainTest.cpp  main_test.cpp
tests/adapters/: CMakeLists.txt
tests/adapters/state_updater/: CMakeLists.txt  StateUpdaterTest.cpp
tests/core/: CMakeLists.txt  SimulationCoreTest.cpp
tests/helpers/: GridTestBuilder.cpp  GridTestBuilder.hpp
(+660 files in other folders)
